Fixed Java deprecation warnings (ICE-8722)